# googletrend

./: .env.example  .gitignore  README.md  pyproject.toml
data/: test.err
notebooks/: 01_apple_poc.ipynb  01_poc_template.ipynb
reference/: README_FILL_THIS_OUT.txt  apple_revenue_weights.csv  apple_segments.csv  companies.csv  ntl_rois.csv  revenue_weights.csv  segments.csv
scripts/: _migrate_parquet.py  _smoke_test.py  _test_xqapi.py  compute_gits.py  fetch_ntl.py  fetch_prices.py  fetch_trends.py  gits.py
src/gits/: __init__.py  cli.py  config.py  nightlights.py  reference.py  xqapi.py
src/gits/analysis/: backtest.py  plots.py
src/gits/collectors/: prices.py  trends.py
src/gits/engine/: normalize.py  weighting.py
src/gits/storage/: duckdb_io.py
web/: streamlit_app.py
web/lib/: utils.py  xqapi.py
web/pages/: 1_Companies.py  1_詳細報告.py  2_Segments.py  2_使用說明.py  3_Weights.py  3_公司清單.py  4_Pipeline.py  4_關鍵字組.py  5_Report.py  5_營收資料.py  6_進階執行.py  7_夜間燈光.py  8_主題趨勢.py
