[project]
name = "gits-scanner"
version = "0.1.0"
description = "Global Intent Leading Indicator Scanner - Apple PoC"
requires-python = ">=3.11"
dependencies = [
    "pytrends>=4.9.2",
    "yfinance>=0.2.40",
    "duckdb>=1.0.0",
    "pandas>=2.2.0",
    "plotly>=5.20.0",
    "pyarrow>=15.0.0",
    "tenacity>=8.2.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "scipy>=1.13.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gits"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "UP"]
ignore = ["E501"]
